# RexPy

./: .gitignore  LICENSE  README.md  create_pip_package.bat  create_pip_package_test.bat  install.py  pyproject.toml
regis/: build.py  code_coverage.py  compiler_db.py  diagnostics.py  dir_watcher.py  generation.py  git.py  git_hooks.py  install_externals.py  required_externals.py  required_libs.py  required_tools.py  rex_json.py  run_clang_tidy.py  run_clang_tools.py  setup.py  subproc.py  task_raii_printing.py  test.py  util.py  vs.py
rexpy/: build.py  diagnostics.py  generation.py  git_hooks.py  install_externals.py  ninja_launcher.py  required_libs.py  required_tools.py  rex_json.py  run_clang_tools.py  setup.py  subprocess.py  task_raii_printing.py  test.py  util.py
